--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
-<head></head>
-<body><h1>hello github!</h1></body>
+  <head>      
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  </head>
+  <body>
+    <h1>hello github!</h1>
+  </body>
 </html>
